# BmstuCcGoCompiler

./: .gitignore  CMakeLists.txt  array_sort.go  fact.go  fib.go  gobuild.sh  hello.go  list_reverse.go
codegen/: CMakeLists.txt  gen.sh
grammar/: GoLexer.g4  GoParser.g4
include/: llvm_visitor.hpp  tools.hpp  value.hpp
include/antlr4/: go.hpp
include/antlr4/codegen/: GoLexer.h  GoParser.h  GoParserBaseVisitor.h  GoParserVisitor.h
include/ir_builders/: block_controller.hpp  ir_bi_oper_builder.hpp  ir_builder.hpp  ir_function_builder.hpp  ir_number_builder.hpp  ir_string_builder.hpp  ir_type_builder.hpp
src/: llvm_visitor.cpp  main.cpp
src/antlr4/codegen/: GoLexer.cpp  GoParser.cpp  GoParserBaseVisitor.cpp  GoParserVisitor.cpp
test/: CMakeLists.txt
test/tests/: ir_builder.cpp
tmp/: array_sort  array_sort.ll  example  example.ll  fact  fact.ll  fib  fib.ll  hello  hello.ll  list_reverse  list_reverse.ll
